# xserver

./: configure.ac  cpprules.in
dix/: dispatch.c  events.c
glx/: glxcmds.c
hw/: Makefile.am
hw/kdrive/ephyr/: Makefile.am  dri2.c  dri2.h  ephyr.c  ephyrdri2.c  ephyrdri2.h  ephyrdri2ext.c  ephyrdri2ext.h  ephyrdri2proxy.c  ephyrdri2proxy.h  ephyrdriext.c  ephyrhostproxy.c  ephyrhostproxy.h  ephyrinit.c  hostx.c  hostx.h
hw/xclutter/: Makefile.am  xclutter-input.c  xclutter-input.h  xclutter-output.c  xclutter-xnest-client.c  xclutter-xnest-client.h  xclutter.c  xclutter.h
include/: dix.h  dixstruct.h  os.h
os/: WaitFor.c  osinit.c
xfixes/: xfixes.h
